--- a/source/includes/changelogs/releases/7.3.4.rst
+++ b/source/includes/changelogs/releases/7.3.4.rst
@@ -50,6 +50,8 @@ Internals
   shard
 - :issue:`SERVER-86829` Make concurrency_replication_for_export_import
   not run analyze_shard_key.js
+- :issue:`SERVER-86879` concurrency_replication* tasks are not running
+  on the UBSan DEBUG build variant
 - :issue:`SERVER-86905` Inconsistent values for $$NOW across shards in
   find queries
 - :issue:`SERVER-87267` Increase bucket_catalog memory usage threshold
@@ -103,6 +105,8 @@ Internals
   time field is renamed by $addFields
 - :issue:`SERVER-90869` Disallow dotted full-path renames for
   '$elemMatch' expressions
+- :issue:`SERVER-90893` listDatabases inconsistent with concurrent DDL
+  operations
 - :issue:`SERVER-90958` $bucketAuto should group documents with same
   grouping keys in the same bucket
 - :issue:`SERVER-90984` Fix exhaust hello stream to process
@@ -210,8 +214,12 @@ Internals
   setfcv_aborts_reshard_collection.js
 - :issue:`SERVER-92186` Implement simple API to get/set app_metadata
   from/to wiredtiger config strings
+- :issue:`SERVER-92193` Index Bounds Builder tries to build geo bounds
+  using non-geo index
 - :issue:`SERVER-92199` Ban change_stream_lookup_single_shard_cluster.js
   from stepdown suites
+- :issue:`SERVER-92201` currentop_shell.js may not wait long enough for
+  all shards to be ready in sharded collection passthroughs
 - :issue:`SERVER-92254` Fix deadlock in
   _shardsvrCompactStructuredEncryptionDataCommand
 - :issue:`SERVER-92298` Remove unused ProjectionPathASTNode argument to
@@ -231,6 +239,7 @@ Internals
   multiversion tests
 - :issue:`SERVER-92549` [v7.3] Fix sbe_multiplanner_index_check.js in
   classic engine
+- :issue:`SERVER-92601` Remove the package_new_compile task
 - :issue:`SERVER-92603` Or-to-in rewrite does not always avoid rewriting
   parameterized expressions
 - :issue:`SERVER-92623` Pin the version of v5.0 to 5.0.28 in
@@ -238,3 +247,12 @@ Internals
 - :issue:`SERVER-92670` Fix indents in test yml on 7.3
 - :issue:`SERVER-92689` Fix continuous multiversion tests on v7.3 branch
 - :issue:`SERVER-92777` Fix the URL components for the RHEL8 artifact
+- :issue:`SERVER-92939` Route tools download to the newest rhel version
+- :issue:`SERVER-93005` Avoid duplicating read preference when running
+  an exhaust query in the shell
+- :issue:`SERVER-93014` Setting locally
+  timeseriesBucketsMayHaveMixedSchemaData during MultiIndexBlock::commit
+  might generate catalog inconsistencies
+- :issue:`SERVER-93099` Allow collMod with
+  timeseriesBucketsMayHaveMixedSchemaData=false
+
