--- a/source/includes/changelogs/releases/6.0.17.rst
+++ b/source/includes/changelogs/releases/6.0.17.rst
@@ -92,7 +92,7 @@ Internals
   error
 - :issue:`SERVER-86674` Primary catch-up may believe it is caught up
   when it is not
-- :issue:`SERVER-86879` ``concurrency_replication*`` tasks are not running
+- :issue:`SERVER-86879` concurrency_replication* tasks are not running
   on the UBSan DEBUG build variant
 - :issue:`SERVER-87373` prepareUnique index option FCV compatibility
   check shouldn't be performed during startup
@@ -182,7 +182,7 @@ Internals
 - :issue:`SERVER-91778` Do not close cursor in the shell when cursor
   reaches limit
 - :issue:`SERVER-91793` Exclude backports touching only
-  ``etc/*suppressions`` files from release codeownership
+  etc/*suppressions files from release codeownership
 - :issue:`SERVER-91818`
   resharding_coordinator_recovers_abort_decision.js Should Be More
   Insistent When Stepping Up New Primary
@@ -216,8 +216,6 @@ Internals
 - :issue:`SERVER-92382` Updating a prepareUnique index does not check
   whether constraints are being enforced
 - :issue:`SERVER-92415` Bump db-contrib-tool version to v0.8.3
-- :issue:`SERVER-92426` Adapt tests to rely on new
-  timeseriesBucketsMayHaveMixedSchemaData catalog option format
 - :issue:`SERVER-92516` Remove openssl111 buildvariants
 - :issue:`SERVER-92547` Use the old rhel80 variant name on v4.2 and v4.4
   multiversion tests
@@ -229,6 +227,7 @@ Internals
   $_internalAllCollectionStats
 - :issue:`SERVER-92712` progress_monitor_doesnt_crash_on_not_critical
   should use a smaller value of PROGRESS_TIMEOUT_SECONDS
+- :issue:`SERVER-92733` Update PyGithub to 1.58
 - :issue:`SERVER-92751` Fix Simple8b ResetRLE test for big-endian
   machines
 - :issue:`SERVER-92777` Fix the URL components for the RHEL8 artifact
@@ -247,3 +246,4 @@ Internals
   index specification order
 - :issue:`SERVER-93174` Do not elect secondaries in
   mongos_rs_shard_failure_tolerance test
+
