Fixes build issue (#9042)

--- a/source/includes/changelogs/releases/6.0.17.rst
+++ b/source/includes/changelogs/releases/6.0.17.rst
@@ -182,7 +182,7 @@ Internals
 - :issue:`SERVER-91778` Do not close cursor in the shell when cursor
   reaches limit
 - :issue:`SERVER-91793` Exclude backports touching only
-  etc/*suppressions files from release codeownership
+  etc/\*suppressions files from release codeownership
 - :issue:`SERVER-91818`
   resharding_coordinator_recovers_abort_decision.js Should Be More
   Insistent When Stepping Up New Primary
