DOCSP-41541-FAQ-storage (#9072)

--- a/source/faq.txt
+++ b/source/faq.txt
@@ -20,10 +20,10 @@ FAQ pages in this section:
 .. toctree::
    :hidden:
 
-   /faq/fundamentals
-   /faq/indexes
-   /faq/concurrency
-   /faq/sharding
-   /faq/replica-sets
-   /faq/storage
-   /faq/diagnostics
+   Fundamentals </faq/fundamentals>
+   Indexes </faq/indexes>
+   Concurrency </faq/concurrency>
+   Sharding </faq/sharding>
+   Replication </faq/replica-sets>
+   Storage </faq/storage>
+   Diagnostics </faq/diagnostics>
