--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -71,14 +71,14 @@ EOL Releases
    :maxdepth: 1
    :hidden:
 
-   /release-notes/8.0
-   /release-notes/7.3
-   /release-notes/7.2
-   /release-notes/7.1
-   /release-notes/7.0
-   /release-notes/6.0
-   /release-notes/5.0
-   /release-notes/4.4
+   8.0 (Release Candidate) </release-notes/8.0>
+   7.3 </release-notes/7.3>
+   7.2 </release-notes/7.2>
+   7.1 </release-notes/7.1>
+   7.0 (Stable Release) </release-notes/7.0>
+   6.0 </release-notes/6.0>
+   5.0 </release-notes/5.0>
+   4.4 </release-notes/4.4>
 
 
 .. end-include-here
@@ -94,4 +94,4 @@ See also: :doc:`/reference/versioning`
    :maxdepth: 1
    :hidden:
 
-   /reference/versioning
+   Versioning </reference/versioning>
